# threedep

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/workflows/: continuous-integration.yml
docker/: Dockerfile  Dockerfile-dev  build  cibuild  console  docs-server  format  notebook  stac  test
examples/: catalog.json
examples/usgs-3dep-1/: collection.json
examples/usgs-3dep-1/n40w110/: catalog.json
examples/usgs-3dep-1/n40w110/n41w106-1/: n41w106-1.json
examples/usgs-3dep-1/n41w106-1/: n41w106-1.json
examples/usgs-3dep-13/: collection.json
examples/usgs-3dep-13/n40w110/: catalog.json
examples/usgs-3dep-13/n40w110/n41w106-13/: n41w106-13.json
examples/usgs-3dep-13/n41w106-13/: n41w106-13.json
scripts/: format  lint  publish  test
src/stactools/threedep/: __init__.py  commands.py  constants.py  metadata.py  stac.py  utils.py
tests/: test_commands.py  test_stac.py  test_utils.py
tests/data-files/base/1/TIFF/current/n40w106/: USGS_1_n40w106.xml
tests/data-files/base/1/TIFF/current/n41w106/: USGS_1_n41w106.xml
tests/data-files/base/13/TIFF/current/n40w106/: USGS_13_n40w106.xml
tests/data-files/base/13/TIFF/current/n41w106/: USGS_13_n41w106.xml
tests/data-files/one-offs/: USGS_1_n19w090.xml
