[metadata]
name = stactools-threedep
version = attr: stactools.threedep.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-threedeps/stactools-threedep
project_urls =
    Documentation = https://stactools-threedep.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-threedeps/stactools-threedep/issues
keywords = 
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.0
    boto3 >= 1.17

[options.packages.find]
where = src
